<resources>
    <string name="app_name">Makita Nicaragua</string>
    <string name="input_user_email">Usuario</string>
    <string name="input_user_password">Contraseña</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="textView_register">¿No tienes cuenta? Regístrate.</string>
    <string name="textView_forgot_password">Olvidé mi contraseña.</string>
    <string name="label_forgot_password">Por favor ingrese su usuario para recuperar su contraseña:</string>
    <string name="button_verify_email">Verificar</string>
    <string name="input_user_identification_card">Identificación</string>
    <string name="label_register">Por favor, ingrese su cédula de identidad para verificar si ya es cliente Makita:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_products">Productos</string>
    <string name="title_invoices">Facturas</string>
    <string name="title_workshop_orders">Taller</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_login_empty_fields">Debe llenar los campos</string>
    <string name="progress_dialog_login_validating">Validando credenciales...</string>
    <string name="generic_500_error">Ocurrió un error al procesar la solicitud</string>
    <string name="progress_dialog_register">Procesando registro...</string>
    <string name="error_register_empty_field">Debe llenar el campo para proceder</string>
    <string name="register_radio_btn_label_cedula">Cédula</string>
    <string name="register_radio_btn_label_idCliente">Número de cliente Fetesa</string>
    <string name="label_idType">Escoja la identificación con la que desea registrarse:</string>
    <string name="label_verify_register">Ingrese el código que recibirá por correo electrónico para completar el registro.</string>
    <string name="button_validate_register">Validar</string>
    <string name="input_user_verification_code">Código de verificación</string>
    <string name="progress_dialog_confirmationRegister">Confirmando código...</string>
    <string name="label_complete_register">Complete su registro escogiendo su usuario y contraseña:</string>
    <string name="input_username_complete_registration">Usuario</string>
    <string name="input_password_complete_registration">Contraseña</string>
    <string name="button_complete_register">Finalizar</string>
    <string name="input_password_confirm_complete_registration">Confirmar contraseña</string>
    <string name="progress_dialog_complete_register">Finalizando registro...</string>
    <string name="error_endRegister_empty_field">Debe llenar los campos para finalizar el registro</string>
    <string name="error_endRegister_passwords_dont_match">Las contraseñas ingresadas no coinciden</string>
    <string name="title_profile">Perfil</string>
    <string name="input_profile_username">Usuario</string>
    <string name="input_profile_identificationNumber">Identificación</string>
    <string name="input_profile_firstName">Primer nombre</string>
    <string name="input_profile_secondName">Segundo Nombre</string>
    <string name="input_profile_lastName">Primer apellido</string>
    <string name="input_profile_secondLastName">Segundo apellido</string>
    <string name="input_profile_birthDate">Fecha de nacimiento</string>
    <string name="profile_radio_btn_male">Masculino</string>
    <string name="profile_radio_btn_female">Femenino</string>
    <string name="textView_profile_gender">Género:</string>
    <string name="input_profile_firstEmail">E-mail primario</string>
    <string name="input_profile_secondEmail">E-mail secundario</string>
    <string name="input_profile_cellphone">Número de celular</string>
    <string name="progress_dialog_profile_loading">Cargando perfil...</string>
    <string name="check_points_btn">Consultar puntos Makita</string>
    <string name="title_fragment_profile">Perfil</string>
    <string name="makita_points_message">Usted tiene %.2f puntos Makitas válidos hasta el %s</string>
    <string name="progress_dialog_fetching_points">Consultando puntos Makita...</string>
    <string name="input_invoice_number">Número de Factura</string>
    <string name="button_bind_invoice">Registrar factura</string>
    <string name="title_binded_products">Productos registrados</string>
    <string name="progress_dialog_profile_saving">Guardando cambios en el perfil...</string>
    <string name="message_profile_updated">El perfil se ha actualizado exitosamente.</string>
    <string name="label_no_products">Aún no hay productos registrados</string>
    <string name="progress_dialog_products_loading">Cargando productos registrados...</string>
    <string name="message_no_serial">Se requiere ingresar serial</string>
    <string name="progress_dialog_invoice_binding">Vinculando la factura...</string>
    <string name="label_no_invoices">Aún no hay facturas registradas</string>
    <string name="progress_dialog_invoice_loading">Cargando facturas...</string>
    <string name="edit_serial_btn">Ingresar serial para este producto</string>
    <string name="input_productDetail_description">Descripción del producto</string>
    <string name="input_productDetail_price">Precio</string>
    <string name="input_productDetail_measureUnit">Unidad de medida</string>
    <string name="input_productDetail_partNumber">Número de parte</string>
    <string name="input_productDetail_serialNumber">Número Serial</string>
    <string name="input_productDetail_store">Sucursal</string>
    <string name="input_productDetail_type">Tipo de compra</string>
    <string name="input_productDetail_physicalInvoiceNumber">Número físico de factura</string>
    <string name="input_productDetail_date">Fecha</string>
    <string name="input_productDetail_kgWeight">Peso en KG</string>
    <string name="edit_serial_save_btn">Guardar Serial</string>
    <string name="progress_dialog_product_saving_warranty">Guardando serial</string>
    <string name="progress_dialog_getting_warranty">Obteniendo garantía...</string>
    <string name="check_warranty_btn">Verificar garantía</string>
    <string name="label_invoice_detail">Productos registrados en esta factura:</string>
    <string name="menu_change_password">Cambiar contraseña</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="options">Opciones\\</string>
    <string name="progress_dialog_updating_password">Actualizando contraseña...</string>
    <string name="label_update_password">Por favor, ingrese su anterior contraseña, acto seguido ingrese su nueva contraseña y confirme:</string>
    <string name="input_old_password">Contraseña actual</string>
    <string name="button_update_password">Actualizar contraseña</string>
    <string name="input_new_password">Nueva contraseña</string>
    <string name="input_confirm_new_password">Confirme nueva contraseña</string>
    <string name="validate_no_empty_field">Este campo es requerido</string>
    <string name="validate_no_equal_passwords">Las contraseñas no coinciden</string>
    <string name="title_logout">Cerrar sesión</string>
    <string name="message_logout">¿Está seguro que desea cerrar sesión? Será a la pantalla de inicio de sesión</string>
    <string name="logout_accept">Aceptar</string>
    <string name="logout_cancel">Cancelar</string>
    <string name="message_logging_out">Cerrando sesión...</string>
    <string name="progress_dialog_validating_user">Validando usuario...</string>
    <string name="generic_empty_fields">Debe llenar los campos solicitados</string>
    <string name="label_forgot_password_verification_code">Por favor, ingrese el código que ha recibido en su correo electrónico:</string>
    <string name="progress_dialog_forgot_password_verification_code">Validando código...</string>
    <string name="label_forgot_password_completion">Por favor, ingrese su nueva contraseña:</string>
    <string name="button_end">Finalizar</string>
    <string name="progress_dialog_competion_forgot_password">Guardando nueva contraseña...</string>
    <string name="progress_dialog_workshop_fragment">Cargando órdenes de reparación...</string>
    <string name="label_no_orders">Aún no hay órdenes registradas.</string>
    <string name="button_show_all_orders">Mostrar historial completo de órdenes</string>
    <string name="check_show_quoted_orders">Mostrar órdenes en cotización</string>
    <string name="button_show_quoted_orders">Mostrar órdenes en estado de cotización</string>
    <string name="button_show_order_details">Ver detalles de cotización</string>
    <string name="button_accept_quote">Aceptar</string>
    <string name="button_reject_quote">Rechazar</string>
    <string name="message_quoted_details">Después de tres meses no nos hacemos responsables por herramientas abandonadas, (reparadas o no reparadas)</string>
    <string name="progress_dialog_order_details_accepting">Aceptando cotización...</string>
    <string name="message_accepting_quote">Aceptar cotización</string>
    <string name="message_accepting_quote_label">¿Está completamente seguro que desea aceptar esta cotización?</string>
    <string name="label_reason_rejection">Por favor, indique la razón por la que decide rechazar esta cotización:</string>
    <string name="input_reason">Razón</string>
    <string name="progress_dialog_rejecting_quote">Rechazando cotización...</string>
    <string name="button_show_recommended_products">Mostrar productos recomendados</string>
    <string name="label_no_recommended_products">En este momento no existen productos recomendados para usted, por favor regrese más tarde.</string>
    <string name="progress_dialog_recommended_products">Cargando productos recomendados...</string>
    <string name="button_have_code">Ya tengo un código</string>
</resources>
