<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/empty"
        android:title="@string/options"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@drawable/baseline_more_vert_white_48">

        <menu>

            <item android:id="@+id/action_password"
                android:icon="@android:drawable/ic_menu_preferences"
                app:showAsAction="ifRoom"
                android:title="@string/menu_change_password" />

            <item android:id="@+id/action_logout"
                android:icon="@drawable/baseline_exit_to_app_black_48"
                app:showAsAction="ifRoom"
                android:title="@string/menu_logout" />

        </menu>

    </item>
</menu>