<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ni.com.fetesa.makitamovil.ui.fragments.ProfileFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_profile_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/text_input_layout_profile_identificationNumber"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:errorEnabled="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_profile_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_profile_username"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_profile_identificationNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/text_input_layout_profile_username"
                    app:errorEnabled="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_profile_identificationNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_profile_identificationNumber"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_profile_firstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_profile_username"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:errorEnabled="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_profile_firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_profile_firstName"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_profile_secondName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_profile_firstName"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:errorEnabled="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_profile_secondName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_profile_secondName"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_profile_lastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_profile_secondName"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:errorEnabled="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_profile_lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_profile_lastName"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_profile_secondLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_profile_lastName"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:errorEnabled="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_profile_secondLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_profile_secondLastName"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_profile_birth_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_profile_secondLastName"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_profile_birthDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/input_profile_birthDate"
                        android:inputType="date"
                        android:maxLines="1"
                        android:drawableRight="@android:drawable/ic_menu_my_calendar"
                        android:focusable="false"
                        android:clickable="true"
                        />
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:id="@+id/textView_profile_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/textView_profile_gender"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_profile_birth_date"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <RadioGroup
                    android:id="@+id/radio_btn_group_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_profile_gender">

                    <RadioButton
                        android:id="@+id/radio_btn_profile_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_radio_btn_male" />

                    <RadioButton
                        android:id="@+id/radio_btn_profile_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_radio_btn_female" />
                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_profile_firstEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/radio_btn_group_profile"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_profile_firstEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_profile_firstEmail"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_profile_secondEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_profile_firstEmail"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_profile_secondEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_profile_secondEmail"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_profile_cellphone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_profile_secondEmail"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_profile_cellphone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_profile_cellphone"/>
                </android.support.design.widget.TextInputLayout>


            </android.support.constraint.ConstraintLayout>
        </ScrollView>


    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_chat_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/baseline_create_white_48"/>

</FrameLayout>
